[package]
name = "lib-misis"
version = "0.1.0"
authors = ["badconfig <array.clean@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix_web_dev = {git = "https://github.com/Engine-studio/actix-web-dev-tools"}
actix-web = "3"
diesel = { version = "1.4.4", features = ["bigdecimal","numeric","postgres", "r2d2", "chrono", "uuid","serde_json"] }
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
actix-service = "1.0.6"
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
diesel-derive-enum = { version = "1", features = ["postgres"] }
uuid ={ version = "0.8.2", features = ["v4"] }
actix-cors = "0.5.4"
